--- a/group_4_2nd_project_a.ipynb
+++ b/group_4_2nd_project_a.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
     "font_name = font_manager.FontProperties(fname=font_path).get_name()\n",
     "rc('font', family=font_name)\n",
     "\n",
-    "phNum_df = pd.read_excel(r'C:\\Users\\user\\Desktop\\hansol\\ProjectB\\01_2024_kr_phNum.xlsx')\n",
+    "phNum_df = pd.read_excel('./datas/01_2024_kr_phNum.xlsx')\n",
     "\n",
     "columns = ['이름','인구 1만명 대비 의사수']\n",
     "\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -296,19 +296,19 @@
        "[2220 rows x 11 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oecd_phy_df = pd.read_csv(r'C:\\Users\\user\\Desktop\\hansol\\ProjectB\\02_oecd_physicians.csv')\n",
+    "oecd_phy_df = pd.read_csv('./datas/02_oecd_physicians.csv')\n",
     "oecd_phy_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -548,19 +548,19 @@
        "[339 rows x 11 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oecd_phy_sal_df = pd.read_csv(r'C:\\Users\\user\\Desktop\\hansol\\ProjectB\\03_salary_doc_oecd.csv')\n",
+    "oecd_phy_sal_df = pd.read_csv('./datas/03_salary_doc_oecd.csv')\n",
     "oecd_phy_sal_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -800,19 +800,19 @@
        "[340 rows x 11 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oecd_phy_gdp_df = pd.read_csv(r'C:\\Users\\user\\Desktop\\hansol\\ProjectB\\04_per_gdp_salary.csv')\n",
+    "oecd_phy_gdp_df = pd.read_csv('./datas/04_per_gdp_salary.csv')\n",
     "oecd_phy_gdp_df "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -923,19 +923,19 @@
        "8  2015       2083        0.3    1767"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "work_hr_kor_oecd_df = pd.read_csv(r'C:\\Users\\user\\Desktop\\hansol\\ProjectB\\05_work_hr_kr_oecd_mean.csv')\n",
+    "work_hr_kor_oecd_df = pd.read_csv('./datas/05_work_hr_kr_oecd_mean.csv')\n",
     "work_hr_kor_oecd_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1038,19 +1038,19 @@
        "10  2060       43.1%"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kor_old_df = pd.read_csv(r'C:\\Users\\user\\Desktop\\hansol\\ProjectB\\06_older_kr.csv')\n",
+    "kor_old_df = pd.read_csv('./datas/06_older_kr.csv')\n",
     "kor_old_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1402,19 +1402,19 @@
        "18     1195     1214     1229  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kor_loc_doc_df = pd.read_csv(r'C:\\Users\\user\\Desktop\\hansol\\ProjectB\\07_city_kor_doc.csv')\n",
+    "kor_loc_doc_df = pd.read_csv('./datas/07_city_kor_doc.csv')\n",
     "kor_loc_doc_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1766,13 +1766,13 @@
        "18    674635    676759    678159    675252  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kor_loc_pop_df2 = pd.read_csv(r'C:\\Users\\user\\Desktop\\hansol\\ProjectB\\08_10yrs_local_kr_doc.csv')\n",
+    "kor_loc_pop_df2 = pd.read_csv('./datas/08_10yrs_local_kr_doc.csv')\n",
     "kor_loc_pop_df2"
    ]
   },
@@ -1800,7 +1800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
